2003-11-16  Lluis Sanchez Gual <lluis@ximian.com>

	* ChannelServices.cs: Removed some TODOs. Implemented AsyncDispatchMessage.

2003-11-13  Lluis Sanchez Gual <lluis@ximian.com>

	* ChannelServices.cs: Catch errors when creating configured channels.

2003-11-12  Lluis Sanchez Gual <lluis@ximian.com>

	* ChannelServices.cs: Added support for creating channels from configuration
	  files. Added some locks.
	* SinkProviderData.cs: Implemented.

2003-11-11  Lluis Sanchez Gual <lluis@ximian.com>

	* CrossAppDomainChannel.cs: Implemented support for async calls.
	* ClientChannelSinkStack.cs, ServerDispatchSinkProvider.cs: Removed some TODOs

2003-11-01  Zoltan Varga  <vargaz@freemail.hu>

	* CrossAppDomainChannel.cs (SyncProcessMessage): Use the new 
	InvokeInDomain function instead of calling SetDomain.	

2003-10-23  Lluis Sanchez Gual <lluis@ximian.com>

	* CrossAppDomainChannel.cs: Before the domain switch, save and reset
	  thread's datastore. Restore it on return. This fixes bug #49774.

2003-09-11  Lluis Sanchez Gual <lluis@ximian.com>

	* ChannelServices.cs: Call context management moved to RemotingServices.

2003-08-25  Lluis Sanchez Gual <lluis@ximian.com>

	* ClientChannelSinkStack.cs: Implemented DispatchException.

2003-08-14  Lluis Sanchez Gual <lluis@ximian.com>

	* ChannelServices.cs: Set call context info for the incoming
	  remote call, and restore the context after the call.

2003-07-28  Duncan Mak  <duncan@ximian.com>

	* TransportHeaders.cs: Added Serializable attribute.

	* ClientChannelSinkStack.cs: Added no-param constructor.

2003-07-21  Lluis Sanchez Gual <lluis@ximian.com>

	* ChannelServices.cs: Implemented GetChannel() and GetUrlsForObject()

2003-04-10  Lluis Sanchez Gual <lluis@ideary.com>

	* ChannelDataStore.cs: renamed some members to match MS.NET.
	* ChannelServices.cs: renamed ChannelInfoStore an its members to match MS.NET.
	* CrossAppDomainChannel.cs: Renamed CrossAppDomainChannelData to match MS.NET.